TGR-1173: Resolved more Sonar issues